# ngx-args-filter-module

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: linux-tests.yml  mac-tests.yml
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: args_filter_config_validation.rs  args_filter_integration.rs  args_filter_logic.rs  perf_filter_logic.rs  tracing_integration.rs
crates/integration-tests/tests/helpers/: mod.rs
crates/ngx-args-filter/: Cargo.toml  build.rs
crates/ngx-args-filter/src/: conf_ext.rs  lib.rs  logging.rs  nginx_str.rs  status.rs  version.rs
crates/ngx-args-filter/src/config/: args_filter.rs  init.rs  main.rs  mod.rs
crates/ngx-args-filter/src/directives/: args_filter.rs  args_filter_nested.rs  mod.rs
crates/xtask/src/: main.rs
docs/: build.md  module.md  performance.md
scripts/: build.sh
