[workspace]
members = [
    "crates/*",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
ngx = { version = "0.5.0", features = ["vendored"] }
nginx-sys = "0.5"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = "1"
reqwest = { version = "0.13", features = ["json"] }
anyhow = "1"

[workspace.lints.rust]
dead_code = "deny"
unused_imports = "deny"
unused_variables = "deny"
unused_must_use = "deny"
unused_attributes = "deny"
unreachable_code = "deny"
unused_macros = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
