[package]
name = "ngx-args-filter-module"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]
test = false

[dependencies]
ngx = { workspace = true, features = ["vendored"] }
nginx-sys = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["std"] }
